styles/index.css
body {
    display: flex;
    flex-direction: column;
    min-height: 100dvh;
    background-image: url("../assets/img/12_website/index-bk.jpg");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

header {
    display: flex;
    align-items: center;
    flex-direction: column;
    background: #09212a;

    div {
        display: flex;
        height: 80px;
        padding: 20px 123px;
    }
}

main {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
    background: none;

    section {
        padding: 0 123px;
        h1 {
            font-family: "Boogaloo";
            margin-top: 64px;
            margin-bottom: 80px;
            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
        }
    }
}

canvas {
    display: block;
    border-radius: 5px 5px 5px 5px;

    background-image: url("../assets/img/9_intro_outro_screens/start/startscreen_2.png");
    background-size: 100% 100%;

    width: 100%;
    height: 100%;
}

#fullscreen{
    .hide-object {
        display: none;
    }
}

#overlay-UI {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: end;
    gap: 50px;
}

#overlay-main-menu {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#mobile-controls {
    display: flex;
    flex-direction: row;
    justify-content:space-between;
    
    width: 100%;
}

button {
    background-color: rgb(238, 161, 7);
    border: 2px solid;
    border-color: rgb(219, 100, 9);
    box-shadow: 2px 2px 5px rgba(0,0,0,0.5);

    img {
        background: none;
        border: none;
        width: 30px;
        height: 30px;
    }
}

button:hover {
    background-color: rgb(238, 183, 74);
    border-color: rgb(222, 128, 56);
}

.button-UI {
    border-radius: 50%;
    height: 50px;
    width: 50px;
    margin: 15px;
}

.button-rect {
    border-radius: 5px;
    height: 50px;
    width: 150px;

    font-family: "Boogaloo";
    font-size: 25px;
    color: rgb(95, 50, 2);
}


.button-image-offset {
    top: 2px;
}

.button-mirror-image {
    transform: scaleX(-1);
}

.audio_slider {
    width: 100px;
    height:25px;
}

footer {
    display: flex;
    align-items: center;
    justify-content: center;

    background: #09212a;
    height: 128px;
}

/* Smartphones */
@media only screen and (max-width: 720px) {
    canvas {
        width: 100%;
    }
}

/* Smartphones */
@media only screen and (max-height: 480px) {
    canvas {
        height: 100vh;
    }
}

